--- a/docker/powerdns/pdns.conf
+++ b/docker/powerdns/pdns.conf
@@ -1,9 +1,10 @@
 api=yes
 api-key=changeme
-launch=bind
 setgid=pdns
 setuid=pdns
 webserver=yes
 webserver-address=0.0.0.0
 webserver-allow-from=0.0.0.0/0
 webserver-port=8081
+launch=gsqlite3
+gsqlite3-database=/var/lib/powerdns/pdns.sqlite3
